# FYC

./: .gitignore  README.md  benchmark.py  environment.yml  inference.py  main.py  onnx_inference.py  pyproject.toml
answers/: exo1.py  exo2.py
deep_cnn/: model_builder.py  train_model.py  utils.py
input/: keep.txt
lab_onnx/: onnx.ipynb
labello/: .gitignore  README-HTTPS.md  README.md  next.config.mjs  package-lock.json  package.json  server.mjs
labello/app/: globals.css  page.tsx
labello/backend/: README.md  main.py  requirements.txt  start.sh
material/: 1-cnn-intro.ipynb  2-cnn-prediction.ipynb
tests/: conftest.py
